@@ -1,3 +1,15 @@
+Wed Dec  8 15:20:26 UTC 2010  Jeff Parsons <j.parsons@vanderbilt.edu>
+
+        * TAO_IDL/ast/ast_module.cpp:
+
+           Cosmetic changes.
+
+        * TAO_IDL/fe/y.tab.cpp:
+        * TAO_IDL/fe/idl.yy:
+
+          Added an exit if there is a an error produced in adding
+          a template module.
+
 Wed Dec  8 12:36:06 UTC 2010  Martin Corino  <corino_m@remedy.nl>
 
         * TAO_IDL/be/be_visitor_component/component_ami_rh_ex_base.cpp:
